--- a/index.html
+++ b/index.html
@@ -446,8 +446,7 @@
                             <div class="details">
                                 <div class="details-inner">
                                     <h3>Cô dâu</h3>
-                                    <p>Vui vẻ với nụ cười luôn thường trực trên môi. 'Bình yên là điều tuyệt vời nhất
-                                        con người ta hướng đến. Và bình yên của em là Anh.'</p>
+                                    <p>Cảm ơn anh đã ở bên động viên, hỗ trợ, làm đôi bạn cùng tiến với em suốt 3 năm qua, nhiều lần giúp em tìm lại được định hướng trong khi em đang rối bời. Anh vừa là thầy, vừa là bạn, vừa là người chăm sóc những lúc em yếu mềm. Sự kiên định, kiên trì và kỷ luật của anh là điều mà em luôn ngưỡng mộ. Mong rằng cộng thêm sự tỉ mỉ của em, mình sẽ tạo thành 1 tổ hợp hoàn hảo, cùng nhau trải qua những năm tháng tươi đẹp phía trước, cùng hợp sức làm những điều lớn lao hơn anh nhé!</p>
                                     <span class="signature">Thu Thảo</span>
                                     <!-- <ul class="social-links">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
