--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@
                             <div class="details">
                                 <div class="details-inner">
                                     <h3>Chú rể</h3>
-                                    <p>"Tình yêu là những cảm xúc chân thực, là cùng nhau đi qua những tháng ngày giông
-                                        tố, là cùng nhau tận hưởng bình yên, không phải là những lời thề non hẹn biển."
+                                    <p>"Cảm ơn em đã bước vào cuộc đời anh, mang theo muôn vàn sắc màu rực rỡ biến những ngày bình lặng trở nên ý nghĩa và tươi đẹp hơn bao giờ hết. Anh vẫn luôn đắm say trước nụ cười rạng rỡ và nét dịu hiền nơi em – điều khiến trái tim anh bình yên mỗi khi nghĩ về. Chứng kiến hành trình yêu thương đầy hạnh phúc của chúng mình, anh càng thêm trân trọng và mong chờ ngày đôi ta chính thức về chung một nhà. Anh hứa sẽ nỗ lực hết mình để trở thành chỗ dựa vững chãi, đem lại hạnh phúc của em suốt những năm tháng về sau."
                                     </p>
                                     <span class="signature">Đức Hoằng</span>
                                     <!-- <ul class="social-links">
@@ -446,7 +445,7 @@
                             <div class="details">
                                 <div class="details-inner">
                                     <h3>Cô dâu</h3>
-                                    <p>Cảm ơn anh đã ở bên động viên, hỗ trợ, làm đôi bạn cùng tiến với em suốt 3 năm qua, nhiều lần giúp em tìm lại được định hướng trong khi em đang rối bời. Anh vừa là thầy, vừa là bạn, vừa là người chăm sóc những lúc em yếu mềm. Sự kiên định, kiên trì và kỷ luật của anh là điều mà em luôn ngưỡng mộ. Mong rằng cộng thêm sự tỉ mỉ của em, mình sẽ tạo thành 1 tổ hợp hoàn hảo, cùng nhau trải qua những năm tháng tươi đẹp phía trước, cùng hợp sức làm những điều lớn lao hơn anh nhé!</p>
+                                    <p>"Cảm ơn anh đã ở bên động viên, hỗ trợ, làm đôi bạn cùng tiến với em suốt 3 năm qua, nhiều lần giúp em tìm lại được định hướng trong khi em đang rối bời. Anh vừa là thầy, vừa là bạn, vừa là người chăm sóc những lúc em yếu mềm. Sự kiên định, kiên trì và kỷ luật của anh là điều mà em luôn ngưỡng mộ. Mong rằng cộng thêm sự tỉ mỉ của em, mình sẽ tạo thành 1 tổ hợp hoàn hảo, cùng nhau trải qua những năm tháng tươi đẹp phía trước, cùng hợp sức làm những điều lớn lao hơn anh nhé!"</p>
                                     <span class="signature">Thu Thảo</span>
                                     <!-- <ul class="social-links">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -531,7 +530,7 @@
                                     </span>
                                     <div class="story-text">
                                         <h3>Ngày đầu bên nhau</h3>
-                                        <span class="date">2022</span>
+                                        <span class="date">19-11-2022</span>
                                         <p>Gặp gỡ từ thuở ấu thơ, bên nhau qua bao mùa trưởng thành, để rồi phải đến năm
                                             cuối đại học, lời tỏ tình dũng cảm và sự chân thành đã biến tình bạn của
                                             chúng mình thành tình yêu, </p>
