--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <div class="details">
                                 <div class="details-inner">
                                     <h3>Chú rể</h3>
-                                    <p>"Cảm ơn em đã bước vào cuộc đời anh, mang theo muôn vàn sắc màu rực rỡ biến những ngày bình lặng trở nên ý nghĩa và tươi đẹp hơn bao giờ hết. Anh vẫn luôn đắm say trước nụ cười rạng rỡ và nét dịu hiền nơi em – điều khiến trái tim anh bình yên mỗi khi nghĩ về. Chứng kiến hành trình yêu thương đầy hạnh phúc của chúng mình, anh càng thêm trân trọng và mong chờ ngày đôi ta chính thức về chung một nhà. Anh hứa sẽ nỗ lực hết mình để trở thành chỗ dựa vững chãi, đem lại hạnh phúc của em suốt những năm tháng về sau."
+                                    <p>"Cảm ơn em đã bước vào cuộc đời anh, mang theo muôn vàn sắc màu rực rỡ, biến những ngày bình lặng trở nên ý nghĩa và tươi đẹp hơn bao giờ hết. Anh vẫn luôn đắm say trước nụ cười rạng rỡ và nét dịu hiền nơi em – điều khiến trái tim anh bình yên mỗi khi nghĩ về. Chứng kiến hành trình yêu thương đầy hạnh phúc của chúng mình, anh càng thêm trân trọng và mong chờ ngày đôi ta chính thức về chung một nhà. Anh hứa sẽ nỗ lực hết mình để trở thành chỗ dựa vững chãi, đem lại hạnh phúc cho em suốt những tháng năm về sau."
                                     </p>
                                     <span class="signature">Đức Hoằng</span>
                                     <!-- <ul class="social-links">
