--- a/index.html
+++ b/index.html
@@ -952,18 +952,18 @@
 
                 <div class="row content">
                     <div class="col col-md-6">
-                        <h3>Chú rể</h3>
                         <div class="img-holder" style="display: flex; justify-content: flex-start;">
-                            <img src="images/gift/qr_me.jpg" alt class="img img-responsive" style="max-width: 200px; height: auto;">
+                            <img src="images/gift/qr_cr.png" alt class="img img-responsive" style="max-width: 200px; height: auto; padding-bottom: 20px;">
                         </div>
-                        <p style="clear: both;">Gia đình xin chân thành cảm ơn!</p>
+                        <h3 style="margin: 0" >Nguyễn Đức Hoằng</h3>
+                        <p style="clear: both;">VPBank - 139780067</p>
                     </div>
                     <div class="col col-md-6">
-                        <h3>Cô dâu</h3>
                         <div class="img-holder">
-                            <img src="images/gift/qr_thao.jpg" alt class="img img-responsive" style="max-width: 200px; height: auto;" >
+                            <img src="images/gift/qr_cd.png" alt class="img img-responsive" style="max-width: 200px; height: auto; padding-bottom: 20px;" >
                         </div>
-                        <p style="clear: both;"> Gia đình xin chân thành cảm ơn!</p>
+                        <h3 style="margin: 0" >Nguyễn Đức Thu Thảo</h3>
+                        <p style="clear: both;">ACB - 35957117</p>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
