change qr message

--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@
                         </div>
                     </div>
                 </div> <!-- end section-title -->
-
+                <!-- <h3 style="margin: 0; text-align: center; color: #fff;" ></h3> -->
+                <h3 style="margin: 0; text-align: center; color: #fff; padding-bottom: 20px;" >Niềm vui của chúng mình sẽ trọn vẹn hơn khi có lời chúc từ bạn ♡♡♡</h3>
                 <div class="row content">
                     <div class="col col-md-6">
                         <div class="img-holder" style="display: flex; justify-content: flex-start;">
