change image gallery

--- a/index.html
+++ b/index.html
@@ -765,11 +765,11 @@
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC8480.webp" alt="" class="img img-responsive">
                                 </a>
                             </div> -->
-                            <div class="grid wedding">
+                            <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC8510.webp" class="fancybox" data-fancybox-group="gall-1" loading="lazy">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC8510.webp" alt="" class="img img-responsive">
                                 </a>
-                            </div>
+                            </div> -->
                             <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC8539.webp" class="fancybox" data-fancybox-group="gall-1" loading="lazy">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC8539.webp" alt="" class="img img-responsive">
@@ -815,21 +815,21 @@
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9223.webp" alt="" class="img img-responsive">
                                 </a>
                             </div>
-                            <div class="grid wedding">
+                            <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9235.webp" class="fancybox" data-fancybox-group="gall-1" loading="lazy">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9235.webp" alt="" class="img img-responsive">
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9275.webp" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9275.webp" alt="" class="img img-responsive">
                                 </a>
                             </div> -->
-                            <div class="grid wedding">
+                            <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9281.webp" class="fancybox" data-fancybox-group="gall-1" loading="lazy">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9281.webp" alt="" class="img img-responsive">
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9330.webp" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9330.webp" alt="" class="img img-responsive">
@@ -845,11 +845,11 @@
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9410.webp" alt="" class="img img-responsive">
                                 </a>
                             </div>
-                            <div class="grid wedding">
+                            <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9866.webp" class="fancybox" data-fancybox-group="gall-1" loading="lazy">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9866.webp" alt="" class="img img-responsive">
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- <div class="grid wedding">
                                 <a href="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9906.webp" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="https://raw.githubusercontent.com/tconqueror/anhcuoi/refs/heads/main/_DSC9906.webp" alt="" class="img img-responsive">
