--- a/index.html
+++ b/index.html
@@ -605,11 +605,11 @@
                                 <ul>
                                     <li><i class="fa fa-map-marker"></i>Số 21, ngõ 74, đường Giáp Hải, xã Bát Tràng, Hà
                                         Nội</li>
-                                    <li><i class="fa fa-clock-o"></i>09:00 - 11:00 ngày 24/01/2026</li>
+                                    <li><i class="fa fa-clock-o"></i>10:00 ngày 24/01/2026</li>
                                 </ul>
                                 <div>
                                     <div style="margin-bottom: 5px !important;">Trân trọng kính mời tới dự bữa cơm thân
-                                        mật mừng hạnh phúc tại gia đình Nhà trai vào lúc 09:00 thứ 7 ngày 24/01/2026
+                                        mật mừng hạnh phúc tại gia đình Nhà trai vào lúc 10:00 thứ 7 ngày 24/01/2026
                                         (tức ngày 06 tháng 12 năm Ất tị). Và tới dự Lễ Thành Hôn được tổ chức tại Nhà
                                         trai vào lúc 14:00 cùng ngày.</div>
                                     <div style="font-weight: 600 !important;">Rất hân hạnh được đón tiếp!</div>
